samples/_failures_safe/1761707272_fc08a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9fb7fb3.c: In function ‘main’:
./samples/SAFE/__tmp_a9fb7fb3.c:153:17: error: expected expression at end of input
  153 |                 if (
      |                 ^~
./samples/SAFE/__tmp_a9fb7fb3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9fb7fb3.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a9fb7fb3.c:153:17: error: expected declaration or statement at end of input
